[No-Card] Fix bug in wrapping of reference of question level

--- a/src/app/components/question-level-rating/question-level-rating.component.css
+++ b/src/app/components/question-level-rating/question-level-rating.component.css
@@ -28,6 +28,7 @@
 p {
   word-wrap: break-word;
   width: 95%;
+  max-height:50vh;
 }
 
 .spacer {
